Fix positioning on form to prevent jumps.

--- a/src/components/common/form-group/form-group.scss
+++ b/src/components/common/form-group/form-group.scss
@@ -1,4 +1,4 @@
 .FormGroup {
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
