--- a/src/components/common/input/input.scss
+++ b/src/components/common/input/input.scss
@@ -7,6 +7,7 @@
     border: 1px solid $color-grey;
     transition: box-shadow 0.25s;
     min-width: 200px;
+    width: 100%;
 
     &:active,
     &:focus {
@@ -16,6 +17,10 @@
 
     &--error {
       border: 1px solid $color-error;
+    }
+
+    &--success {
+      border: 1px solid $color-primary;
     }
   }
 
@@ -29,6 +34,8 @@
   }
 
   &__validation-message {
+    position: absolute;
+    top: 63px;
     font-size: 12px;
     padding-top: 5px;
     padding-left: 5px;
